# tetragon

./: .gitignore  Cargo.toml  architecture.md  readme.md
4gon/: 4gon.ebnf  fib.4gon
examples/: assign.tetra  bad-id.tetra  call.tetra  fib-add2.tetra  fib.tetra  fib2-add2.tetra  fib2.tetra  fib3.tetra  flip.tetra  free.tetra  nested.tetra  tuple.tetra
src/: grammar.rs  lalr1.rs  lexer.rs  lr0.rs  main.rs  pow.rs  slice.rs  terminal.rs
src/generator/: _.rs  grammar.rs  lalr1.rs  lr0.rs  terminal.rs
src/interpreter/: _.rs  base.rs  cypress.rs  firefly.rs  flow.rs  june.rs
src/parser/: _.rs  lexer.rs  parser.rs
src/translator/: _.rs  cps.rs  elaborator.rs  hoister.rs  label.rs  nasm_win64.rs  sequentializer.rs  symbol.rs
src/util/: _.rs  composite.rs  fix.rs  pow.rs  slice.rs
src/utility/: _.rs  composite.rs  fix.rs  ignore.rs  pow.rs
tetra/: fib.tetra
